Let the module that uses native code name it, and its runners redeclare it
Whether native code runs is decided by what a program uses, not by the
library that offers it: a library can expose a native API that most of its
users never call. A bare @jenesis.native therefore no longer means the module
itself - a module names every module it grants native access, itself only
when it calls restricted methods, and a tag that names nothing is refused.
Jenesis-Native-Access records all of those names instead of a flag, so a
module that runs this one learns what it has to grant, since a grant is still
never inherited.

jenesis.dependency.native gains warn between ignore and strict, reporting
each name a running module does not grant without failing the build. jpx
grants what the jar it launches names. The demo now has a library that offers
the native function and declares nothing, a module that uses it and names it,
and an application that runs that module and grants the same.